--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i");
+@font-face {
+  font-family: "Chicago";
+  src: url("/Chicago.ttf");
+}
 
 $siteWidth: 1100px;
 
@@ -7,28 +10,10 @@ $smallGutter: 8px;
 $largeGutter: 24px;
 $largerGutter: 48px;
 
-$fontFamily: "IBM Plex Sans";
+$fontFamily: "Chicago";
 
 $colorWhite: #fff;
 $colorBlack: #000;
-$colorDark: #070707;
-$colorGrey: #40434e;
-$colorGreyLight: #ebeff5;
-$colorPrimary: #5b95ff;
-$colorPrimaryLight: #76a6ff;
-$colorPrimaryLighter: #95baff;
-$colorText: #070707;
+$colorGrey: #cccccc;
 
 $transitionSpeed: 0.22s;
-
-@mixin wrapped($padded: true) {
-  > div {
-    max-width: $siteWidth;
-    margin: 0 auto;
-    position: relative;
-
-    @if $padded {
-      padding: $normalGutter;
-    }
-  }
-}
