loading chicago font

--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Chicago";
-  src: url("/Chicago.ttf");
+  src: url("../assets/Chicago.ttf");
 }
 
 $siteWidth: 1100px;
