--- a/src/css/core.scss
+++ b/src/css/core.scss
@@ -8,7 +8,7 @@
 
 body {
   background-color: $colorWhite;
-  color: $colorText;
+  color: $colorBlack;
   margin: 0;
   font-family: $fontFamily, sans-serif;
   line-height: 1.6;
