ltos of stylings

--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -7,8 +7,9 @@ $siteWidth: 1100px;
 
 $normalGutter: 16px;
 $smallGutter: 8px;
-$largeGutter: 24px;
-$largerGutter: 48px;
+$smallestGutter: 4px;
+$largeGutter: 20px;
+$largerGutter: 24px;
 
 $fontFamily: "Chicago";
 
@@ -17,3 +18,4 @@ $colorBlack: #000;
 $colorGrey: #cccccc;
 
 $transitionSpeed: 0.22s;
+$radius: 8px;
