--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,6 +1,14 @@
 @font-face {
   font-family: "Chicago";
-  src: url("../assets/Chicago.ttf");
+  src: url("../assets/Chicago2.ttf");
+}
+@font-face {
+  font-family: "Monaco";
+  src: url("../assets/Monaco.ttf");
+}
+@font-face {
+  font-family: "Geneva";
+  src: url("../assets/Geneva2.ttf");
 }
 
 $siteWidth: 1100px;
